# metis

./: .gitignore  README.md  dev-plan-2.md  dev-plan.md  pyproject.toml  speed-plan.md
.github/workflows/: bench.yml
docs/: CHANGELOG.md  benchmarks.md  improvement-proposals.md  improvement-roadmap-top5.md
docs/vulnerability-research-engine/: 2026-05-21-research-parser-depth-plan.md  README.md  implementation-plan.md  llm-assisted-research-plan.md  parser-vulnerability-coverage-plan.md  research-coverage-matrix.md  research-parser-vulnerability-gaps-plan.md
src/metis/: configuration.py  metis.yaml  plugin_loader.py
tests/: test_azure_provider.py  test_bench_manifest.py  test_bench_runner.py  test_bench_scoring.py  test_cli_commands.py  test_cli_entry.py  test_configuration.py  test_diff_utils.py  test_engine_core.py  test_engine_review.py  test_graphs.py  test_metisignore.py  test_openai_compatible_provider.py  test_sarif.py  test_sarif_triage.py  test_static_tools.py  test_tool_registry.py  test_triage_filters.py  test_triage_graph.py  test_triage_treesitter.py  test_tui_app.py  test_tui_artifacts.py  test_tui_bootstrap.py  test_tui_chat.py  test_tui_commands.py  test_tui_runner.py  test_tui_sanitize.py  test_tui_security_report.py  test_tui_tools.py
tests/bench/: test_runner_caps.py
tests/benchmarks/: baseline-quick.json  baseline-quick.sarif  baseline-research-quick.json  manifest.yaml  perf-baseline.json  research-manifest.yaml
tests/cli/: test_variants_command.py
tests/engine/: test_authz_outlier_hunter.py  test_code_index.py  test_code_injection_hunter.py  test_command_injection_hunter.py  test_crypto_misuse_hunter.py  test_deserialization_hunter.py  test_embed_cache.py  test_evm_external_call_hunter.py  test_hardware_security_hunter.py  test_hunter_registry.py  test_hypothesis_verifier.py  test_iac_exposure_hunter.py  test_injection_path_hunter.py  test_local_proof_generator.py  test_memory_lifetime_hunter.py  test_nosql_injection_hunter.py  test_parser_inventory.py  test_path_heuristics.py  test_path_traversal_hunter.py  test_research_lessons.py  test_research_models.py  test_research_reporting.py  test_research_rules.py  test_research_service.py  test_review_agentic.py  test_review_options.py  test_secrets_exposure_hunter.py  test_ssrf_hunter.py  (+7 more)
(+197 files in other folders)
