[project]
name = "metis"
version = "1.3.0"
description = "Metis is a command line tool for performing security code reviews using LLMs"
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE"]
keywords = ["security", "llm", "code-review"]
requires-python = ">=3.12"
dependencies = [
    "llama-index>=0.14.21",
    "llama-index-llms-langchain>=0.8.0",
    "llama-index-vector-stores-chroma>=0.5.5",
    "llama-index-llms-openai-like>=0.7.1",
    "langchain>=1.2.15",
    "langchain-openai>=1.2.0",
    "langgraph>=1.1.9",
    "rich>=15.0.0",
    "PyYAML>=6.0.3",
    "prompt_toolkit>=3.0.52",
    "unidiff>=0.7.5",
    "tree-sitter>=0.25.1",
    "tree-sitter-language-pack<1.0",
    "chromadb>=1.5.8",
    "pydantic>=2.13.3",
    "pathspec>=1.1.0",
    "textual>=6.5.0",
]

[build-system]
requires = ["setuptools>=82.0.1"]
build-backend = "setuptools.build_meta"

[project.scripts]
metis = "metis.cli.entry:main"

[project.optional-dependencies]

postgres = ["llama-index-vector-stores-postgres>=0.8.1"]
test = ["pytest>=9.0.3","pytest-cov>=7.1.0"]

lint = [
  "ruff>=0.15.11",
  "black>=26.3.1",
  "mypy>=1.20.2",
  "pre-commit>=4.6.0"
]

azure = [
]

dev = [
  "metis[test]",
  "metis[lint]"
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
metis = ["metis.yaml"]
"metis.plugins" = ["plugins.yaml"]
"metis.cli" = ["report_template.html"]
"metis.schemas" = ["*.json"]

[project.entry-points."metis.plugins"]
python = "metis.plugins.python_plugin:PythonPlugin"
c = "metis.plugins.c_plugin:CPlugin"
cpp = "metis.plugins.cpp_plugin:CppPlugin"
go = "metis.plugins.go_plugin:GoPlugin"
rust = "metis.plugins.rust_plugin:RustPlugin"
solidity = "metis.plugins.solidity_plugin:SolidityPlugin"
ruby = "metis.plugins.ruby_plugin:RubyPlugin"
terraform = "metis.plugins.terraform_plugin:TerraformPlugin"
tablegen = "metis.plugins.tb_plugin:TableGenPlugin"
typescript = "metis.plugins.typescript_plugin:TypeScriptPlugin"
php = "metis.plugins.php_plugin:PHPPlugin"
javascript = "metis.plugins.javascript_plugin:JavaScriptPlugin"
systemverilog = "metis.plugins.systemverilog_plugin:SystemVerilogPlugin"
verilog = "metis.plugins.verilog_plugin:VerilogPlugin"
